<resources>
    <string name="app_name">AppFoodPet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_pets">Meus Pets</string>
    <string name="action_settings">Settings</string>
    <string name="text_nome">Nome</string>
    <string name="txt_password">Senha</string>
    <string name="txt_confirmpassword">Confimar senha</string>
    <string name="text_email">E-mail</string>
    <string name="text_telefone">Telefone</string>
    <string name="text_cpf">CPF</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="nav_pedido">Meus Pedidos</string>
    <string name="btn_entrar">Entrar</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
